vlib/v/parser/tests/const_missing_rpar_b.out
vlib/v/parser/tests/const_missing_rpar_b.vv:4:1: error: unexpected eof, expecting ´)´
    2 |     a = 5
    3 |     // foo
