vlib/v/parser/tests/const_missing_rpar_b.vv
const (
	a = 5
	// foo
